# tourdegiro

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  README.md  TDG.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ArtLib/: ArtLib.vcxproj  ArtLib.vcxproj.filters  ArtNet.cpp  ArtNet.h  ArtTools.cpp  ArtTools.h  ArtVector.cpp  ArtVector.h  AutoCS.cpp  AutoCS.h  BoostNet.cpp  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PipeNet.cpp  PipeNet_OSX.cpp  cmake_install.cmake  md5.cpp  md5.h  stdafx.h
ArtLib/ArtLib.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
ArtLib/ArtLib.dir/RelWithDebInfo/ArtLib.tlog/: custombuild.command.1.tlog  custombuild.write.1.tlog
ArtLib/jama/: jama_lu.h
GameAI/: .gitignore  GameAI.cpp  GameAI.h  GameAI.vcxproj  GameAI.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ReadMe.txt  cmake_install.cmake  cmakelists.txt
GameAI/GameAI.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
GameLib/: Game.cpp  Game.h  GameLib.vcxproj  GameLib.vcxproj.filters  GameShared.cpp  GameShared.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  LocalStatsStore.cpp  LocalStatsStore.h  cmake_install.cmake  cmakelists.txt  simtypes.h  stdafx.h  types.h
GameLib/GameLib.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  (+4 more)
MinimalTdG/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MinimalTdG.vcxproj  MinimalTdG.vcxproj.filters  cmake_install.cmake  main.cpp  stdafx.h  test.gpx
MinimalTdG/MinimalTdG.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  MinimalTdG_manifest.rc  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Minixml/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ReadMe.txt  cmake_install.cmake  config.h  config.h.rej  minixml.vcxproj  minixml.vcxproj.filters  mxml-attr.c  mxml-file.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-set.c  mxml-string.c
Minixml/RelWithDebInfo/: minixml.lib
Minixml/minixml.dir/RelWithDebInfo/: CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.write.1.tlog  custombuild.command.1.tlog  lib.command.1.tlog
Minixml/minixml.dir/RelWithDebInfo/minixml.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
ServerLib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  ServerLib.vcxproj  ServerLib.vcxproj.filters  SimpleClient.cpp  SimpleClient.h  SimpleServer.cpp  SimpleServer.h  ThreadedResultsSaver.cpp  ThreadedResultsSaver.h  TourServer.cpp  TourServer.h  cmake_install.cmake  cmakelists.txt  stdafx.h
TourDeGiroCommon/: .gitignore  ArtSimpleSpline.cpp  ArtSimpleSpline.h  CMakeLists.txt  CommStructs.cpp  CommStructs.h  FileExporters.cpp  FileExporters.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  Map.cpp  Map.h  Player.cpp  Player.h  PlayerConsts.cpp  PlayerConsts.h  PlayerTests.cpp  SprintClimbImpl.cpp  SprintClimbImpl.h  StatsStore.cpp  StatsStore.h  Tools.cpp  Tools.h  TourDeGiroCommon.vcxproj  TourDeGiroCommon.vcxproj.filters  cdacalc.xlsx  cmake_install.cmake  stdafx.h
TourDeGiroCommon/TourDeGiroCommon.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  TourDeGiroCommon.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
TourDeGiroCommon/TourDeGiroCommon.dir/RelWithDebInfo/TourDeGiroCommon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog
TourDeGiroData/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PainterIFace.h  TDGData.cpp  TDGInterface.h  TourDeGiroData.vcxproj  TourDeGiroData.vcxproj.filters  cmake_install.cmake
TourDeGiroData/RelWithDebInfo/: TourDeGiroData.lib
boost/lib/: libboost_filesystem-vc100-mt-1_49.lib  libboost_system-vc100-mt-1_49.lib  libboost_system-vc100-mt-gd-1_49.lib
libcurl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CURL.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  cmake_install.cmake
libcurl/cmake/: CurlTests.c
libcurl/lib/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  curl_config.h  hostip.c  libcurl.vcxproj  libcurl.vcxproj.filters  nonblock.c  nwlib.c  strerror.c  url.c
libcurl/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  curl.vcxproj  curl.vcxproj.filters
libcurl/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
nedmalloc/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  nedmalloc.c  nedmalloc.h  nedmalloc.vcxproj  nedmalloc.vcxproj.filters
nedmalloc/RelWithDebInfo/: nedmalloc.lib
nedmalloc/nedmalloc.dir/RelWithDebInfo/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
nedmalloc/nedmalloc.dir/RelWithDebInfo/nedmalloc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  lib.command.1.tlog
zlib-1.2.8/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  libz.1.2.8.dylib  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.pc  zlib.sln  zlib1.vcxproj  zlib1.vcxproj.filters
(+111 files in other folders)
